Fix collection tree header alignment on macOS

--- a/scss/mac/_virtualized-table.scss
+++ b/scss/mac/_virtualized-table.scss
@@ -15,6 +15,10 @@
 	.spacer-twisty {
 		min-width: 19px;
 	}
+  
+	.spacer-header {
+		min-width: 6px;
+	}
 }
 
 .virtualized-table-body, .drag-image-container{
